# eve

./: .env.DUMMY  .env.example  .env.example.stage  .eve.example  .eve.example.STAGE  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  comfyui.py  conversation_2025-12-29_16-55-12.json  conversation_2025-12-29_17-04-55.json  conversation_2025-12-29_17-06-03.json  conversation_2025-12-29_17-22-31.json  docker-compose.yml  modal_tool.py  package-lock.json  package.json  pyproject.toml  remote_replicate_tool.py  responses.txt  test_env_files.py
.github/workflows/: deploy-gateway.yaml  deploy-gateway2.yaml  deploy-gateway3.yaml  generate-tool-docs.yml  prod.yaml  staging.yaml  update-tools.yaml  web3-prod.yaml  web3-staging.yaml
api/: rate_limiter.py
eve/: __init__.py  agent.py  api.py  artifact.py  async_mongo.py  auth.py  base.py  concepts.py  cron.py  data_export.py  deploy.py  eden_utils.py  llm.py  models.py  mongo.py  mongo_async.py  postprocessing.py  profiling.py  run_agent_refresh.py  s3.py  session2.py  soc.py  storage.py  task.py  thread.py  tool.py  tool_constants.py  trigger.py  user.py
eve/adapters/: anthropic.py  openai.py
eve/agent/: agent.py  dispatch.py  enhance.py  generation.py  llm.py  run.py  run_session.py  run_thread.py  session.py  tasks.py  think.py  thread.py  tool_loaders.py
eve/agent/deployments/: GATEWAY_README.md  TWITTER_GATEWAY_DOCS.md  __init__.py  captions.py  discord.py  discord_gateway.py  discord_oauth.py  discord_v3.py  email.py  farcaster.py  gateway_v2.py  gateway_v3.py  gmail.py  google_calendar.py  instagram.py  moltbook.py  neynar_client.py  printify.py  shopify.py  telegram.py  tiktok.py  twitter.py  twitter_gateway.py  typing_manager.py  utils.py
eve/agent/llm/: constants.py  (+9 more)
eve/agent2/: agent.py  core.py  core2.py  core_final.py  core_mcp_only.py  core_real.py  core_working.py  debug_mcp.py  demo_final.py  demo_working.py  dispatcher.py  handlers.py  llm.py  message.py  session.py  session_create.py  test_embedded.py  test_replicate_direct.py  test_simple.py
eve/agents/: .env.example
eve/api/: api.py  api2.py  api3.py  api_functions.py  api_requests.py  errors.py  handlers.py  helpers.py  jobs.py  modal_app.py  rate_limiter.py  requests.py  runner_tasks.py  session_streams.py  sse_manager.py  trigger2.py  typing_coordinator.py  typing_debug.py  utils.py
eve/cli/: __init__.py  agent_cli.py  chat_cli.py  deploy_cli.py  export_cli.py  lookup_cli.py  start_cli.py  tool_cli.py  upload_cli.py
eve/clients/: common.py
eve/context/: context.py  memory_assemble_context.py  memory_cold_sessions_processor.py  memory_constants.py  memory_update_shard.py
eve/functions/: fn_trigger.py
eve/llm/: config.py  llm.py
eve/mcp/: api.py  openapi.json  server.py  test_mcp_client.py
eve/mcp_server/: README.md  client_example.py  modal_app.py  server.py
eve/prompt_templates/: extract_agent_prompts.txt  knowledge_reply.txt  knowledge_summarize.txt  knowledge_think.txt  model_doc.txt  models_instructions.txt  system.txt  system2.txt  thought.txt  tools.txt
eve/runner/: runner.py  runner_tasks.py  triggers.py
eve/services/: trigger_fn.py
eve/session/: channel.py  example.py  message.py  run.py  session.py
eve/tools/: __init__.py  comfyui_tool.py  fal_tool.py  gcp_tool.py  local_tool.py  mcp_tool.py  modal_tool.py  replicate_tool.py  tool_handlers.py
eve/utils/: __init__.py  chain_utils.py  constants.py  cost_utils.py  data_utils.py  export_utils.py  file_utils.py  ipfs_utils.py  kms_encryption.py  media_utils.py  seed_utils.py  system_utils.py  template_utils.py  testing_utils.py  text_utils.py  validation_utils.py
examples/: example_litellm.py  prompt_example.py  session_custom_tool_example.py  session_example.py  session_force_tool_example.py  session_rollup.py  session_thinking_example.py  structured_output_example.py
modal_functions/: chat_trigger.py
new-tests/: test_memory_graphiti_backend.py
playwright-report/: index.html
scripts/: add_cost_indexes.py  backfill_discord_v3_channel_guilds.py  check_gmail_delegation.py  check_imports.py  disable_creations_vector_search.py  eden_api_example.py  field_updater.py  generate_mcp_tools.py  generate_tool_docs.py  graphiti_falkor_quickstart.py  migrate_reactions_to_likes.py  mongo_inv.py  process_account_deletions.py  remove_freetools_preview.py  test_api.py  test_observability.sh  test_session_run.py  test_twitter.py  update_user_memories.py
scripts/analytics/: llm_analyze.py  process_thread_data.py
test-results/: .last-run.json
tests/: conftest.py  test_agent.py  test_artifacts.py  test_base.py  test_client.py  test_collection.py  test_create_routing.py  test_discord_dm.py  test_dispatch.py  test_llm.py  test_llm_providers.py  test_memory_identity.py  test_mongo.py  test_providers.py  test_session.py  test_session2.py  test_session3.py  test_session_prompt.py  test_system_message.py  test_think.py  test_thread.py  test_tools.py  test_transcribe.py
tests-OLD/: test_agent.py  test_base.py  test_client.py  test_collection.py  test_discord_post_dm.py  test_dispatch.py  test_media_validation.py  test_mongo.py  test_session_prompt.py  test_system_message.py  test_tasks.py  test_thread.py  test_tools.py
tests/session/: test_observability.py  test_observability_integration.py  test_session_llm.py
(+684 files in other folders)
